--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 
 
@@ -14,7 +15,7 @@
 img {
     max-width: 100%;
 }
-.container{
+.navbar{
     background-color: #1A0B2E;
     max-width: 1250px;
     margin: auto;
@@ -70,7 +71,7 @@ nav> button {
  /* <!-- main-section --> */
 
  .banner-section {
-    background-image: url(../assets/hero-bg.png);
+    background-image: url(/assets/hero-bg.png);
     background-position: center;
     background-repeat: no-repeat;
     max-width: 1250px;
@@ -175,7 +176,6 @@ nav> button {
     background: linear-gradient(47.64deg, rgba(247, 233, 63, 1),rgba(251, 9, 180, 1),rgba(145, 0, 248, 1));
 
 
-
 }
 
  .banner-button-2{
@@ -194,8 +194,6 @@ nav> button {
     border-radius: 50px;
 
 
-
-
  }
  
  .button-section {
@@ -210,9 +208,6 @@ nav> button {
 
 /* <!-- About the Podcast --> */
 
-
-
-   
 
 .podcast{
     background-color: rgba(26, 11, 46, 1);
@@ -239,7 +234,7 @@ nav> button {
 }
 .podcast >p{
 
-    color:#ffffffe5;
+    color:#ffffffb7;
     font-family: Inter;
     font-style: Regular;
     font-size: 14px;
@@ -250,12 +245,15 @@ nav> button {
 
 }
 .podcast-rating{
-    border-top: 1px solid rgba(255, 255, 255, 0.073) ;
+     border-top: 1px solid rgba(255, 255, 255, 0.073) ;
      display: flex;
      flex-direction: row;
      justify-content: space-between;
+     align-items: center;
+     text-align: center;
      gap: 70px;
      padding-top: 50px;
+     
 
 }
 
@@ -273,18 +271,261 @@ nav> button {
 }
 
 .podcast-rating p {
-    color:#FFFFFF;
+    color:#ffffffb8;
     font-family: Inter sans-serif;
     font-style: Regular;
     font-size: 14px;
     font-weight: 300;
-    line-height: 16px;
-    letter-spacing: 0%;
+    line-height: 13px;
     text-align: center;
-    text-transform: uppercase;
+    padding-bottom: 30px;
 }
 
 
+
+
+
+/* -- Choose section */
+
+.section-choose{
+     max-width: 1250px;
+     height: 400px;
+     margin: auto;
+    
+
+}
+.container>*{
+    /* background-color: #230E3D; */
+    background-color: rgba(26, 11, 46, 0.484);
+    
+    
+}
+.section-choose> h1{
+    color:#FFFFFF;
+    background-color:#351165;
+    font-family: Inter;
+    font-style: Bold;
+    font-size: 38px;
+    font-weight: 700;
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 25px;
+}
+.audio{
+    grid-area: audio;
+    width: 350px;
+    height: 380px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 40px;  
+    border-radius: 30px;
+}
+.audio>img{
+    height: 50px;
+    width: 50px;
+    padding-left: 5px;
+    padding-bottom: 6px;
+}
+.audio>h1{
+    color:#FFFFFF;
+    font-family: Inter;
+    font-style: Bold;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 29px;
+    padding:6px;
+    padding-top: 9px;
+    padding-bottom:5px;
+
+}
+.audio>p{
+    color: #ffffffd0;
+    font-family: Inter;
+    font-style: Regular;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 24px;
+    padding: 8px;
+    padding-top: 6px;
+}
+
+.mobile{
+    grid-area: mobile;
+    width: 560px;
+    height: 180px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 20px;  
+    border-radius: 30px;
+
+}
+.mobile>img{
+    height: 55px;
+    width: 50px;
+    padding-left: 5px;
+    padding-top: 6px;
+
+}
+.mobile>h1{
+    color:#FFFFFF;
+    font-family: Inter;
+    font-style: Bold;
+    font-size: 24px;
+    font-weight: 700;
+    padding:6px;
+    padding-top: 9px;
+    padding-bottom:5px;
+
+}
+.mobile>p{
+    color: #ffffffd0;
+    font-family: Inter;
+    font-style: Regular;
+    font-size: 16px;
+    font-weight: 400;
+    text-align: left;
+    padding: 6px;
+    padding-top:4px;
+
+
+}
+.global{
+    grid-area: global;
+    width: 560px;
+    height: 180px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 20px;  
+    border-radius: 30px;
+
+}
+.global>img{
+    height: 50px;
+    width: 50px;
+    padding-left: 5px;
+    padding-bottom: 6px;
+
+}
+.global>h1{
+    color:#FFFFFF;
+    font-family: Inter;
+    font-style: Bold;
+    font-size: 24px;
+    font-weight: 700;
+    padding:4px;
+
+
+}
+.global>p{
+    color: #ffffffd0;
+    font-family: Inter;
+    font-style: Regular;
+    font-size: 16px;
+    font-weight: 400;
+    text-align: left;
+    padding: 4px;
+    padding-top:4px;
+
+}
+
+.interviews{
+    grid-area: interviews;
+    width: 650px;
+    height: 270px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 20px;  
+    border-radius: 30px;
+
+}
+.interviews>img{
+    height: 50px;
+    width: 50px;
+    padding-left: 5px;
+    padding-bottom: 6px;
+
+}
+.interviews>h1{
+    color:#FFFFFF;
+    font-family: Inter;
+    font-style: Bold;
+    font-size: 24px;
+    font-weight: 700;
+    padding:4px;
+
+}
+.interviews>p{
+    color: #ffffffd0;
+    font-family: Inter;
+    font-style: Regular;
+    font-size: 16px;
+    font-weight: 400;
+    text-align: left;
+    padding: 4px;
+    padding-top:4px;
+}
+.resources{
+    grid-area: resources;
+    width: 270px;
+    height: 270px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 20px;  
+    border-radius: 30px;
+}
+.resources>img{
+    height: 50px;
+    width: 50px;
+    padding-left: 5px;
+    padding-bottom: 6px;
+}
+.resources>h1{
+    color:#FFFFFF;
+    font-family: Inter;
+    font-style: Bold;
+    font-size: 24px;
+    font-weight: 700;
+    padding:4px;
+
+}
+.resources>p{
+     color: #ffffffd0;
+    font-family: Inter;
+    font-style: Regular;
+    font-size: 16px;
+    font-weight: 400;
+    text-align: left;
+    padding: 4px;
+    padding-top:4px;
+
+}
+.container{
+    display: grid;
+    flex-direction: row;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+   background-color:#351165;
+
+    grid-template-areas: 
+    
+      "audio  mobile mobile mobile  mobile"
+
+      "audio  global global global global"
+
+      "interviews interviews interviews  resources resources "
+}
 
 
 
